--- a/src/components/leftSide.css
+++ b/src/components/leftSide.css
@@ -5,9 +5,9 @@
 #title {
   font-size: 24px;
   font-weight: 700;
-  top: 0;
-  position: absolute;
-  margin-top: 20px;
+  /* top: 0; */
+  /* position: absolute; */
+  /* margin-top: 20px; */
 }
 
 .leftSide svg {
@@ -37,7 +37,7 @@
 }
 
 #bottom {
-  position: absolute;
+  /* position: absolute;
   bottom: 0;
-  padding-bottom: 30px;
+  padding-bottom: 30px; */
 }
