--- a/src/components/leftSide.css
+++ b/src/components/leftSide.css
@@ -5,9 +5,6 @@
 #title {
   font-size: 24px;
   font-weight: 700;
-  /* top: 0; */
-  /* position: absolute; */
-  /* margin-top: 20px; */
 }
 
 .leftSide svg {
@@ -30,14 +27,11 @@
 }
 
 #top {
-  /* margin-top: auto; */
-  /* padding-bottom: 500px; */
-  /* position: absolute; */
-  /* top: 700; */
+  margin-top: 30px;
 }
 
 #bottom {
-  /* position: absolute;
+  position: absolute;
   bottom: 0;
-  padding-bottom: 30px; */
+  padding-bottom: 20px;
 }
